# cpp-example-plugin

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  release.yml
include/: endstone_cpp_plugin.h  example_listener.h  example_plugin.h  fibonacci_command.h  listener.h  plugin.h  sample_plugin.h  version.h.in
src/: endstone_cpp_plugin.cpp  example_plugin.cpp  fibonacci_command.cpp  plugin.cpp  sample_plugin.cpp
